fix highlight overflow

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -147,6 +147,8 @@ li {
 
     position:relative;
     margin:2rem 0;
+    max-width:100%;
+    overflow:hidden;
 
     pre {
         margin:0;
